--- a/introductionPage.css
+++ b/introductionPage.css
@@ -399,6 +399,22 @@ flex-direction: column;
   .button {
     right: 52%;
   }
+
+.img-container {
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  padding: 20px;
+}
+
+.img-box {
+  width: 100%; 
+  padding: 20px; 
+  position: relative;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
 }
 
 @media (max-width: 400px) {
